--- a/src/app/Components/Farmer/marketplace/marketplace.component.html
+++ b/src/app/Components/Farmer/marketplace/marketplace.component.html
@@ -11,7 +11,7 @@
                              {{item.crop_type}}
                         </p>
                         <p>
-                            {{item.msp}}
+                            {{item.base_price}}
                         </p>
                     </div>
                     <app-crop-bids [crop_auction_id] = item.crop_auction_id></app-crop-bids>
