--- a/src/app/Components/Farmer/sold-history/sold-history.component.html
+++ b/src/app/Components/Farmer/sold-history/sold-history.component.html
@@ -17,7 +17,7 @@
                   <tr *ngFor="let item of soldlist">
                     <td>{{item.sold_date | date: 'shortDate'}}</td>
                     <td>{{item.crop_name}}</td>
-                    <td>{{item.msp}}</td>
+                    <td>{{item.base_price}}</td>
                     <td>{{item.sold_price}}</td>
                     <td>{{item.total_price}}</td>
                   </tr>
