--- a/src/app/Components/about-us/about-us.component.html
+++ b/src/app/Components/about-us/about-us.component.html
@@ -1,1 +1,7 @@
-<div><h1>This is About us page</h1></div>
+<p>
+    Agriculture is the backbone of the Indian Economy"  -said Mahatma Gandhi
+
+Schemes for Farmers is a collaborated portal providing various yojana's, insurance provided by the Government and other sources. We help to provide all-in-one portal for the farmers so they can have maximum benefit and no opportunity is missed. 
+
+Farmers can calculate their insurance for the crop, apply for it and claim as well. They can auction their crop through our portal for selling it for the best price eliminating the stress of physical sale of crop in the market.
+</p>
