--- a/src/app/Components/Farmer/marketplace/marketplace.component.html
+++ b/src/app/Components/Farmer/marketplace/marketplace.component.html
@@ -5,7 +5,7 @@
                 <li class="list-group-item ">
                     <div>
                         <h5 class="m-0 pb-2">
-                            {{item.crop_name | titlecase }}
+                            {{item.crop_name}}
                         </h5>
                         <p class="m-0">
                              {{item.crop_type}}
