--- a/src/app/Components/header/header.component.html
+++ b/src/app/Components/header/header.component.html
@@ -39,26 +39,27 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Home</a>
+          <li class="nav-item active">
+            <a class="nav-link" routerLink="home">Home</a>
+          </li>
+          <li>
+            <a class="nav-link" routerLink="sellrequest">Place sell request</a>
+          </li>
+          <li>
+            <a class="nav-link" routerLink="soldhistory">Sold History</a>
+          </li>
+          <li>
+            <a class="nav-link" routerLink="marketplace">View Marketplace</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Link</a>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              Dropdown
-            </a>
-            <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="#">Action</a></li>
-              <li><a class="dropdown-item" href="#">Another action</a></li>
-              <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="#">Something else here</a></li>
-            </ul>
+            <a class="nav-link" routerLink="aboutus">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link disabled">Disabled</a>
-          </li>
+            <a class="nav-link" routerLink="contactus">Contact</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="cropapprovalrequest">Crop Approval</a>
+        </li>
         </ul>
         <!-- <form class="d-flex" role="search">
           <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
